helm/bootstrap/argocd/patch-argocd-server-wait-dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
